Comply with CHECKLIST.md: JSpecify, Optional idioms, requirements, docs
AllFieldsTab/FieldListSections annotated @NullMarked; null-literal
checks replaced (Optional-based listener subscription, pattern-match
cell rendering, StringUtil.isBlank); isPresent/get blocks replaced with
ifPresent; owner sanitizing uses a precompiled Pattern; markdown
Javadoc uses [refs] instead of {@link}. OpenRewrite applied
(List.getFirst). Requirements added to docs/requirements/entry-editor.md
with impl tracing tags; PLAN.md markdownlint-clean.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>